test/org/midica/testfiles/failing/opt-without-value-if-2.midica
INCLUDE inc/instruments.midica

VAR $x = 5

{ if=
	0  c  /4
}
